<resources>
    <string name="app_name">我爱记单词</string>
    <string name="common_example">示例图片</string>
    <!--基础词汇-->
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="confirm">确定</string>
    <string name="change">更改</string>
    <string name="input_limit">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <!--闪屏界面提示语-->
    <string name="flash_note1">欲望以提升热忱,毅力以磨平高山.</string>
    <string name="flash_note2">受思深处宜先退,得意浓时便可休.</string>
    <string name="flash_note3">不经一番寒彻骨,怎得梅花扑鼻香.</string>
    <string name="flash_note4">宁可枝头抱香死,何曾吹落北风中.</string>
    <string name="flash_note5">三更灯火五更鸡,正是男儿读书时.</string>
    <string name="flash_note6">黑发不知勤学早,白首方悔读书迟.</string>
    <string name="flash_note7">长风破浪会有时,直挂云帆济沧海.</string>
    <string name="flash_note8">时人不识凌云木,直待凌云始道高.</string>
    <string name="flash_note9">黑发不知勤学早,白首方悔读书迟.</string>
    <string name="flash_note10">千锤万凿出深山,烈火焚烧若等闲.</string>

    <!--登录界面-->
    <string name="account">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="logging">登录中</string>
    <string name="login_forget_password">忘记密码?</string>
    <string name="login_register">新用户注册</string>

    <!--toast-->
    <string name="toast_accountOrPassword_error">帐号密码错误</string>
    <string name="toast_complete_information">请将用户名密码填写完整</string>
    <string name="toast_exist_account">该账号已存在</string>
    <string name="toast_register_success">注册成功</string>
    <string name="toast_password_disagree">两次密码不一致</string>
    <string name="toast_input_all_information">请填写所有信息</string>
    <!--找回密码-->
    <string name="reset_title">找回密码</string>
    <string name="reset_prePassword">原密码</string>
    <string name="reset_nowPassword">现密码</string>
    <string name="toast_change_password_success">密码修改成功</string>
    <string name="toast_password_error">密码错误</string>
    <string name="toast_account_not_exist">用户名不存在</string>
    <string name="toast_verify_account_information">验证账户信息中</string>
    <!--注册界面-->
    <string name="register_title">用户注册</string>
    <string name="prePassword">原密码</string>
    <string name="nowPassword">现密码</string>
    <string name="passwordAgain">请再次输入密码</string>
    <string name="register">注册</string>
    <string name="registering">注册中</string>
    <!--fragment界面-->
    <string name="translate">翻译</string>

    <string name="recite">背诵</string>
    <string name="personal_center">个人中心</string>
    <!--翻译界面-->
    <string name="translate_choose_language">选择语言</string>
    <string name="translate_search_note">搜索</string>
    <string name="translate_search_result_note">翻译结果</string>
    <!--背诵页面-->
    <string name="cet_4">CET-4</string>
    <string name="cet_6">CET-6</string>
    <string name="everyday_word">每日一词</string>
    <string name="wrong_word_list">错词本</string>
    <string name="right_word_list">对词本</string>
    <string name="vocab_word_list">生词本</string>
    <!--个人资料-->
    <string name="personal_data">个人资料</string>
    <!--setting界面-->
    <string name="logout">退出登录</string>
    <string name="dialog_logout_message">退出后将返回登录界面，确认退出吗?</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <!--网络请求-->
    <string name="network_request_error">网络异常,请稍后再试</string>


    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
