<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <com.qmuiteam.qmui.widget.QMUITopBar
        android:layout_width="match_parent"
        android:id="@+id/topBar"
        android:layout_height="@dimen/topBar_height">
    </com.qmuiteam.qmui.widget.QMUITopBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_account"
            style="@style/et_account_style"
            android:hint="@string/account" />

        <EditText
            android:id="@+id/et_password"
            style="@style/et_visible_password_style"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/et_rePassword"
            style="@style/et_visible_password_style"
            android:hint="@string/passwordAgain" />

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/btn_register"
            style="@style/btn_style"
            android:text="@string/register" />
    </LinearLayout>

</LinearLayout>