<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/color_topBar_bg">
    <include
        layout="@layout/top_bar">
    </include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:background="@color/bg_fragment"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_account"
            style="@style/et_account_style"
            android:hint="@string/account" />

        <EditText
            android:id="@+id/et_prePassword"
            style="@style/et_visible_password_style"
            android:hint="@string/prePassword"
            android:inputType="textVisiblePassword" />

        <EditText
            android:id="@+id/et_nowPassword"
            style="@style/et_visible_password_style"
            android:hint="@string/nowPassword" />

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@+id/btn_submit"
            style="@style/btn_style"
            android:text="更改" />
    </LinearLayout>

</LinearLayout>